# span

./: .gitignore  .pre-commit-config.yaml  .super-linter.yml  Dockerfile  LICENSE  README.md  hacs.json  mypy.ini  pyproject.toml
.github/linters/: .flake8  .jscpd.json  .super-linter.yml
.github/workflows/: hacs.yml  lint.yml  main.yml
custom_components/span_panel/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  options.py  select.py  sensor.py  span_panel.py  span_panel_api.py  span_panel_circuit.py  span_panel_data.py  span_panel_hardware_status.py  span_panel_status.py  span_panel_storage_battery.py  strings.json  switch.py  version.py
custom_components/span_panel/translations/: en.json  es.json  fr.json  ja.json  pt.json
script/: run-in-env.sh
scripts/: run_mypy.py  setup_env.sh
